# OpenDevin

./: build_vscode.py  pyproject.toml
.github/workflows/: build_run-tests.yml  review-pr.yml  run-integration-tests.yml  run-unit-tests.yml
agenthub/dummy_agent/: agent.py
agenthub/micro/math_agent/: prompt.md
agenthub/micro/study_repo_for_task/: prompt.md
agenthub/micro/verifier/: prompt.md
dev_config/python/: .pre-commit-config.yaml
frontend/src/i18n/: translation.json
opendevin/: config.py
opendevin/controller/: agent_controller.py
opendevin/core/: main.py
opendevin/events/: stream.py
opendevin/llm/: llm.py
openhands/: __init__.py
openhands/cli/: entry.py  fast_help.py
openhands/controller/: agent_controller.py
openhands/controller/state/: state.py
openhands/core/: loop.py  main.py
openhands/core/config/: utils.py
openhands/events/: stream.py
openhands/runtime/builder/: docker.py
openhands/runtime/utils/: bash.py  runtime_build.py
tests/integration/: README.md  conftest.py  regenerate.sh  test_agent.py
tests/integration/mock/test_write_simple_script/: README.md
tests/unit/: test_observation_serialization.py
trajs/: 94be49a5-b5be-47-b1acfbc1857b659.json  e099d7fe-8b94-48-f9e2e83640bb8d3.json
