[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core",]

[tool.poetry]
name = "opendevin"
version = "0.7.0"
description = "OpenDevin: Code Less, Make More"
authors = [ "OpenDevin",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenDevin/OpenDevin"

[tool.autopep8]
ignore = [ "E501",]

[tool.black]
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.11"
datasets = "*"
pandas = "*"
litellm = "*"
google-generativeai = "*"
termcolor = "*"
seaborn = "*"
docker = "*"
fastapi = "*"
toml = "*"
uvicorn = "*"
types-toml = "*"
numpy = "*"
json-repair = "*"
browsergym = "0.3.4"
html2text = "*"
e2b = "^0.17.1"
pexpect = "*"
jinja2 = "^3.1.3"
python-multipart = "*"
boto3 = "*"
minio = "^7.2.7"
gevent = "^24.2.1"
pyarrow = "16.1.0"
tenacity = "^8.4.2"
zope-interface = "6.4.post2"
pathspec = "^0.12.1"

[tool.coverage.run]
concurrency = [ "gevent",]

[tool.poetry.group.llama-index.dependencies]
llama-index = "*"
llama-index-vector-stores-chroma = "*"
chromadb = "*"
llama-index-embeddings-huggingface = "*"
torch = "2.2.2"
llama-index-embeddings-azure-openai = "*"
llama-index-embeddings-ollama = "*"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.10"
mypy = "1.10.1"
pre-commit = "3.7.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-forked = "*"
flake8 = "*"
openai = "*"
python-docx = "*"
PyPDF2 = "*"
pylatexenc = "*"
python-pptx = "*"
opencv-python = "*"
pandas = "*"
reportlab = "*"

[tool.poetry.group.evaluation.dependencies]
streamlit = "*"
whatthepatch = "*"
retry = "*"
evaluate = "*"

[tool.poetry.group.evaluation.dependencies.swebench]
git = "https://github.com/OpenDevin/SWE-bench.git"
